2014-02-24  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Reduplicate common.top_level_path in scripts
        https://bugs.webkit.org/show_bug.cgi?id=129291

        Reviewed by Philippe Normand.

        Duplicate common.top_level_path and avoid polluting many scripts with awkward system
        path manipulation and weird dependencies on the jhbuild infrastructure.

        * Scripts/run-gtk-tests: Use common again.
        (TestRunner._setup_testing_environment): Ditto.
        * gtk/check-gdom-symbols: Ditto.
        * gtk/common.py:
        (top_level_path): Re-add top_level_path..
        (get_build_path): Use the builtin top_level_path again.
        * gtk/find-make-dist-errors: Use common again.
        (get_missing_headers): Ditto.
        * gtk/generate-inspector-gresource-manifest.py: Ditto.

2014-02-26  Mark Hahnenberg  <mhahnenberg@apple.com>

        runscript: line 42: /bin/ls: Argument list too long
        https://bugs.webkit.org/show_bug.cgi?id=129376

        Reviewed by Michael Saboff.

        The "test_script_*" can expand to more things than can be passed as arguments on the command line. 
        We should use find instead, which generates the list of files rather than expanding them all on 
        the command line and spitting them back out.

        * Scripts/jsc-stress-test-helpers/shell-runner.sh: 

2014-02-26  Martin Robinson  <mrobinson@igalia.com>

        ENABLE_PROMISES is improperly specified as ENABLE_PROMISE in Features.pm
        https://bugs.webkit.org/show_bug.cgi?id=129377

        Reviewed by Csaba Osztrogonác.

        * Scripts/webkitperl/FeatureList.pm: Properly specify the promises feature as ENABLE_PROMISES.

2014-02-26  Manuel Rego Casasnovas  <rego@igalia.com>

        [GTK] Re-enable gtk-doc in EWS
        https://bugs.webkit.org/show_bug.cgi?id=128369

        Reviewed by Carlos Garcia Campos.

        Enable again gtk-doc generation in EWS once bug #128417 has been fixed.
