@@ -1,3 +1,9 @@
+2014-02-26  Laszlo Vidacs  <lvidacs.u-szeged@partner.samsung.com>
+
+        Unreviewed. Moved myself to the list of committers.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2014-02-24  Martin Robinson  <mrobinson@igalia.com>
 
         [GTK] Reduplicate common.top_level_path in scripts
